--- a/Tes-C/index.html
+++ b/Tes-C/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADMIN Tes-A </title>
+    <title>ADMIN Tes-C </title>
     <link rel="icon" type="image/png" href="Tes-A-admin.png">
     <link rel="apple-touch-icon" href="Tes-A-admin.png">
     
