--- a/Tes-C/index.html
+++ b/Tes-C/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <iframe 
-    src="https://script.google.com/macros/s/AKfycbxF89XkCCNyXDv5jHbNZDIcpUOwkrERpekPGvOlPzHP09Y_cSgPOgkRRk0m-bsNktuTyw/exec?p=admin" 
+    src="https://script.google.com/macros/s/AKfycbxF89XkCCNyXDv5jHbNZDIcpUOwkrERpekPGvOlPzHP09Y_cSgPOgkRRk0m-bsNktuTyw/exec?page=admin" 
     style="border: none; width: 100%; height: 100vh;" 
     allow="fullscreen" 
     allowfullscreen="true">
